[package]
name = "badi-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = { version = "0.26.2", features = ["native-tls"] }
dotenvy = "0.15.7"
